generate favourite objects per customer
