# rest-app/dist/swagger.json
@@ -269,6 +269,10 @@
                                 "CHF",
                                 "USD"
                             ]
+                        },
+                        "date": {
+                            "description": "calculated date in yyyy-mm-dd",
+                            "type": "string"
                         }
                     }
                 },
@@ -1738,6 +1742,109 @@
                     },
                     "404": {
                         "description": "customer not found"
+                    },
+                    "500": {
+                        "description": "technical server error"
+                    }
+                }
+            }
+        },
+        "/favorites": {
+            "get": {
+                "summary": "get all favorites",
+                "description": "get all favorites. max limit 25, using skip + limit to range\n",
+                "tags": [
+                    "Favorite"
+                ],
+                "parameters": [
+                    {
+                        "name": "skip",
+                        "in": "query",
+                        "description": "nof items skipped in result. Default = 0. Used with limit for paging",
+                        "required": false,
+                        "type": "integer",
+                        "format": "integer"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "limit no of responses. Default = 10. Used with skip for paging",
+                        "required": false,
+                        "type": "integer",
+                        "format": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "$ref": "#/definitions/FavoriteResultList"
+                        }
+                    }
+                }
+            }
+        },
+        "/favorites/search/byQuery/{query}/{sort}/{filter}": {
+            "get": {
+                "summary": "search favorites using mongodb query, use ranges",
+                "description": "search all favorites using a mongodb query in JSON format - see http://bit.ly/2aI9Djk, using. max limit 25, using skip + limit to range\n",
+                "parameters": [
+                    {
+                        "name": "query",
+                        "in": "path",
+                        "description": "mongodb query in JSON format - see http://bit.ly/2aI9Djk",
+                        "required": true,
+                        "default": "{ \"category\" : \"SMARTPHONE_WATCH\" }",
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "sort",
+                        "in": "path",
+                        "description": "sort column in JSON format, use id as default - see http://bit.ly/2aIaK2I",
+                        "required": true,
+                        "default": "{\"amount\" : -1}",
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "filter",
+                        "in": "path",
+                        "description": "filter columns in JSON format, use {} as default - see http://bit.ly/2aEfTdB",
+                        "required": true,
+                        "default": "{}",
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "skip",
+                        "in": "query",
+                        "description": "nof items skipped in result. Default = 0. Used with limit for paging",
+                        "required": false,
+                        "type": "integer",
+                        "format": "integer"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "limit no of responses. Default = 10. Used with skip for paging",
+                        "required": false,
+                        "type": "integer",
+                        "format": "integer"
+                    }
+                ],
+                "tags": [
+                    "Favorite"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "$ref": "#/definitions/FavoriteResultList"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid query parameter"
                     },
                     "500": {
                         "description": "technical server error"
